--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/style.scss
@@ -482,6 +482,77 @@ body {
             margin-top: 0.5ch;
           }
         }
+        &__countdown{
+          width:4ch;
+          height: 4ch;
+          border:1px solid #CCC;
+          position:relative;
+          top:0; bottom:0; left:0;right:0;
+          margin:auto;
+          border-radius:50%; 
+        
+        .circle{
+          width: 20px;
+          height: 20px;
+          background:rgb(0, 0, 0);
+          border-radius:50%;
+          position:relative;
+          top:0; bottom:0; left:0;right:0;
+          overflow:hidden;
+          margin:auto;
+          animation: circle 6s linear infinite;
+          opacity:1;
+        }
+        
+        .circle1{
+          opacity:1;
+          width:150px;
+          height:150px;
+          background:cyan;
+          border-radius:50%;
+          position:absolute;
+          top:0; bottom:0; left:0;right:0;
+          overflow:hidden;
+          margin:auto;
+          animation: circle 6s linear infinite 150ms ;
+        }
+        .circle2{
+          opacity:0;
+          width:150px;
+          height:150px;
+          background:cyan;
+          border-radius:50%;
+          position:absolute;
+          top:0; bottom:0; left:0;right:0;
+          overflow:hidden;
+          margin:auto;
+          animation: circle 6s linear infinite 300ms;
+        }
+        .circle3{
+          opacity:0;
+          width:150px;
+          height:150px;
+          background:cyan;
+          border-radius:50%;
+          position:absolute;
+          top:0; bottom:0; left:0;right:0;
+          overflow:hidden;
+          margin:auto;
+          animation: circle 6s linear infinite 450ms;
+        }
+        .circle4{
+          opacity:0;
+          width:150px;
+          height:150px;
+          background:cyan;
+          border-radius:50%;
+          position:absolute;
+          top:0; bottom:0; left:0;right:0;
+          overflow:hidden;
+          margin:auto;
+          animation: circle 6s linear infinite 600ms;
+        }
+      }
       }
     }
 
@@ -734,3 +805,20 @@ main {
 .md-40 {
   font-size: 40px;
 }
+
+@keyframes circle{
+  0%{
+    transform:rotate(0deg)
+              translate(-165px)
+              rotate(0deg);
+    opacity: 1
+  
+  }
+  100%{
+    transform:rotate(360deg)
+              translate(-165px)
+              rotate(-360deg);
+    opacity:1;
+  }
+}
+
