--- a/02-JavaScript/07-DOM manipulations/Example/02-events/Etan Hw/index.scss
+++ b/02-JavaScript/07-DOM manipulations/Example/02-events/Etan Hw/index.scss
@@ -2,11 +2,12 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
+  font-size: 2rem;
 };
 .container {
   height:max(10vw, 30vw);
   display: flex;
-  overflow-x: scroll;
+  overflow: scroll;
   gap: .2rem;
   // & > * {
   //   flex-shrink: 0;
@@ -34,13 +35,13 @@ body {
 h3 {
   span {
     opacity: 1;
-    transition: all 0.4s ease;
+    transition: all 0.4s ease 1s;
     transform: translateY(0px);
     display: inline-block;
   };
   .fade {
     opacity: 0;
-    transform: translateY(0px);
+    transform: translateY(-50px);
   };
 };
 
