--- a/תרגול/אתגר/style.css
+++ b/תרגול/אתגר/style.css
@@ -1,11 +1,12 @@
 :root {
-    --color:white;
+    --color: white;
 }
 
 body {
     background: linear-gradient(142deg, rgba(13, 40, 157, 1) 25%, rgba(0, 212, 255, 1) 100%);
     display: flex;
     height: 100vh;
+    overflow-y: hidden;
     align-items: center;
     justify-content: center;
 }
@@ -30,25 +31,46 @@ body {
     margin: 1% 0%;
     border-radius: 0.5rem;
     border: none;
-    background-color:  var(--color);
+    background-color: var(--color);
 }
 
-input::placeholder, input[type="submit"] {
+input::placeholder,
+input[type="submit"] {
     font-weight: bold;
 }
 
 input::placeholder {
-    color:rgba(17, 21, 235, 0.562);
+    color: rgba(17, 21, 235, 0.562);
 }
 
 input[type="submit"] {
     width: 30%;
     background-color: rgba(49, 148, 49, 0.85);
-    color:  var(--color);
-    
+    color: var(--color);
+
 }
 
 input[type="submit"]:hover {
     background-color: rgb(11, 102, 11);
     transition: all 0.3s;
+}
+
+.textPush {
+    height: 20vh;
+    /* background-color: aqua; */
+    overflow-y: auto;
+}
+
+.items {
+    width: 80%;
+    padding: 0;
+    margin: 1% auto;
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.items p {
+    padding: 0 0.5%;
 }
