--- a/02-JavaScript/08-forms/shani forms/shani hw/style.scss
+++ b/02-JavaScript/08-forms/shani forms/shani hw/style.scss
@@ -1,13 +1,13 @@
 body {
     margin: 0;
-   padding: 0;
+    padding: 0;
     font-family: monospace;
 }
 
 .form {
     background-color: rgb(98, 255, 247);
     width: 30rem;
-    height: 36rem;   
+    height: 36rem;
     // top: 0;
     // bottom: 0;
     // left: 0;
@@ -17,8 +17,8 @@ body {
     .userInput {
         padding-top: 1rem;
         padding-left: 4rem;
-        
-        
+
+
 
 
     }
@@ -26,8 +26,8 @@ body {
     h1 {
         text-align: center;
         text-decoration: underline;
-        margin-top:2rem;
-        padding-top:2rem;
+        margin-top: 2rem;
+        padding-top: 2rem;
 
 
     }
@@ -37,17 +37,17 @@ body {
 
 
 
-        &:not(#firstname, #lastname, #submit,#month,#day,#year) {
+        &:not(#firstname, #lastname, #submit, #month, #day, #year) {
             width: 21rem;
         }
-        
-        &#submit{
+
+        &#submit {
             position: absolute;
             left: 0;
             right: 0;
             margin: auto;
-            margin-top:1rem;
-            
+            margin-top: 1rem;
+
         }
     }
 
@@ -62,81 +62,112 @@ body {
 
     }
 
-   
+
 }
 
 //the employ card after the details have been put
 
-.employCard{
-    background-color:rgb(196, 194, 194);
+.employCard {
+    background-color: rgb(196, 194, 194);
     width: 40rem;
-    height: 30rem;  
-    margin-top:10rem;
-    margin-bottom:10rem; 
-    border-radius:2rem;
-    margin:auto;
-    margin-top:3rem;
-    margin-bottom:10rem;
-    padding-top:1rem;
+    height: 28rem;
+    margin-top: 10rem;
+    margin-bottom: 10rem;
+    border-radius: 2rem;
+    margin: auto;
+    margin-top: 3rem;
+    margin-bottom: 10rem;
+    padding-top: 1rem;
 
-    .box{
+    .box {
         background-image: url("https://t3.ftcdn.net/jpg/03/51/51/28/360_F_351512882_2kFH8IaSe4lyA7SXBLzEXyGKNEgbO1iH.jpg");
-        width:33rem;
-        height:6rem;
-        margin-left:3.5rem;
-        
+        width: 33rem;
+        height: 6rem;
+        margin-left: 3.5rem;
+
     }
 
-    img{
-        width:7rem;
+    .personPic {
+        width: 7rem;
         z-index: 1;
-        position:absolute;
-        left:5rem;
-        bottom:-7rem;
-        box-shadow: -2px -2px 0 10px  rgb(196, 194, 194);
-        
-    }
-
-    h1,h2{
-      
-        background-color:white;
-        
-    }
-    h1{
-        width:8rem;
-        height:2rem;
+        position: absolute;
+        left: 34rem;
+        bottom: -5rem;
+        box-shadow: -2px -2px 0 10px rgb(196, 194, 194);
 
     }
 
-    h2{
-        width:10rem;
-        height:2rem;
+    .logo{
+        width: 10rem;
+        position: absolute;
+        left: 52rem;
+        bottom: -1rem;
+    }
+
+    h1,
+    h2 {
+
+        background-color: white;
 
     }
 
-    .personName{
-        margin-left:15rem;
-        display:flex;
-        flex-direction:row;
-        gap:1rem;
-        
+    h1 {
+        width: 8rem;
+        height: 2rem;
 
     }
 
-    .login{
-        margin-left:10rem;
-        display:flex;
+    h2 {
+        width: 10rem;
+        height: 2rem;
+
+    }
+
+    .personName {
+        margin-left: 15rem;
+        display: flex;
         flex-direction: row;
-        gap:1rem;
+        gap: 1rem;
+
 
     }
 
-    .grid{
-        display:grid;
+    .login {
+        margin-left: 13rem;
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+
+    }
+
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(2, 15vw);
+        grid-template-rows: 3;
+        margin-left: 3.5rem;
+        margin-top: 1rem;
+        gap: 1px;
+        // grid-auto-rows: minmax(10px, auto);
+
+        .phoneCard {
+            width: 20rem;
+            margin-top:2rem;
+        }
+
+    }
+
+    .rightCorner {
+        gap: 1rem;
+        margin-left:28rem;
+        margin-top:-4rem;
         
+
+
+        .barcode {
+            width: 10rem;
+            height:4rem;
+
+
+        }
     }
-
-    
-    
 }
-
