--- a/02-JavaScript/07-DOM manipulations/Example/shani-HW/DOM hw/style.scss
+++ b/02-JavaScript/07-DOM manipulations/Example/shani-HW/DOM hw/style.scss
@@ -3,6 +3,7 @@ div{
 }
 
 .pacman{
-    transform: translateX();
+    //transform: translateX();
     transition: all 4s;
+    border-radius:50%;
 }
