--- a/02-JavaScript/08-forms/Andrew/homework/style.scss
+++ b/02-JavaScript/08-forms/Andrew/homework/style.scss
@@ -41,6 +41,7 @@ input {
     left: 230px;
     width: 200px;
     height: 100px;
+    z-index: 10;
 }
 
 #sumbit {
@@ -92,7 +93,7 @@ input {
 
     &_pic {
         background-color: white;
-        background-size: 100% 100%;
+        background-size: 130% 100%;
         width: 100px;
         height: 100px;
         position: absolute;
