--- a/02-JavaScript/08-forms/noa/home.scss
+++ b/02-JavaScript/08-forms/noa/home.scss
@@ -14,7 +14,7 @@ form {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.card1 {
+.card {
     margin: 10px;
     padding: 10px;
     width: 300px;
