--- a/02-JavaScript/05-Objects and Arrays/asnafyYossi_Objects/styles.scss
+++ b/02-JavaScript/05-Objects and Arrays/asnafyYossi_Objects/styles.scss
@@ -24,12 +24,48 @@
 }
 
 #name {
-    color: rgb(31, 126, 2);
+    color: #1f7e02;
     margin-top: 4px;
 }
 
 #grade {
-    color: rgb(31, 2, 126);
+    color: #1f027e;
     margin-bottom: 4px;
     border-bottom: 1px solid lightgray;
+}
+
+#form {
+    display: flex;
+    justify-content: center;
+    gap: 4px;
+
+
+    input {
+        font-size: 20px;
+        background-color: #ffffff;
+        border-radius: 4px;
+        border: 1px solid rgb(104, 172, 104);
+        padding: 8px;
+    }
+
+    #submit {
+        color: #1f7e02;
+        font-weight: 500;
+        background-color: #ffffff;
+        padding: 4px;
+    }
+
+}
+#refreshDiv{
+    display: flex;
+    justify-content: center;
+}
+#refresh {
+    font-size: 16px;
+    background-color: #ffffff;
+    border-radius: 4px;
+    border: 1px solid rgb(104, 172, 104);
+    color: #1f7e02;
+    padding: 8px;
+    width: 100px;
 }
