--- a/02-JavaScript/05-Objects and Arrays/Etan/Item Adding/style.scss
+++ b/02-JavaScript/05-Objects and Arrays/Etan/Item Adding/style.scss
@@ -5,10 +5,30 @@ body {
 #container{
     height: 100vh;
     width: 100vw;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+
+    grid-template-areas: 
+    "f f f"
+    "b c m"
+    ". s .";
 justify-content: space-around;
 align-items: center;
+
+.myForm{
+    grid-area: f;
+}
+#book{
+    grid-area: b;
+}
+#clothing{
+    grid-area: c;
+}
+#movie{
+    grid-area: m;
+}
+#submit{
+    grid-area: s;
+}
 .text{
     font-size: 3em;
     font-family: 'Poppins', 'sans-serif';
