--- a/02-JavaScript/05-Objects and Arrays/shani/object and methods/style.scss
+++ b/02-JavaScript/05-Objects and Arrays/shani/object and methods/style.scss
@@ -8,25 +8,74 @@ img {
 
 }
 
-.books {
+h1 {
+  text-decoration: underline;
+}
+
+h2 {
   width: 15vw;
-  background-color: rgb(241, 241, 231);
-  position:relative;
-  display:grid;
-  grid-template-columns: 15vw 1px;
-  
- 
+  text-align: center;
 
 
-  h2 {
-    background-color: yellow;
+}
+
+
+
+.card {
+  // display:grid;
+  // grid-template-columns:30px 30px 30px 30px;
+ // grid-template-rows:30px ;
+
+  .books {
     width: 15vw;
-    text-align: center;
+    background-color: rgb(255, 239, 167);
+    position: relative; 
+    border: solid 5px black;
 
+    h2 {
+      background-color: yellow;
+
+
+
+    }
+
+
+  }
+
+  .movies {
+    width: 15vw;
+    background-color: rgba(70, 8, 8, 0.808);
+    position: relative;
+    display: grid;
+    grid-template-columns: 15vw 1px;
+    
+
+
+    h2 {
+      background-color: red;
+
+
+    }
 
 
   }
 
 
-}
+  .expired {
+    width: 15vw;
+    background-color: rgba(102, 255, 14, 0.616);
+    position: relative;
+    display: grid;
+    grid-template-columns: 15vw 1px;
 
+
+
+    h2 {
+      background-color: rgb(72, 255, 0);
+
+    }
+
+
+  }
+
+}
