--- a/02-JavaScript/05-Objects and Arrays/marina/myHomeHW/myHome.scss
+++ b/02-JavaScript/05-Objects and Arrays/marina/myHomeHW/myHome.scss
@@ -3,7 +3,7 @@ body {
     color: grayscale($color: #4d4c4c);
 }
 
-#listRoot {
+#rootMovie, #rootMusic, #rootBook {
     margin-top: 10em;
     display: flex;
     justify-content: space-evenly;
