--- a/02-JavaScript/07-DOM manipulations/Andrew/andrew/05/index.scss
+++ b/02-JavaScript/07-DOM manipulations/Andrew/andrew/05/index.scss
@@ -1,17 +1,15 @@
 body {
-    margin-top: 20px;
+    
     font-family: Arial, Helvetica, sans-serif;
     background-color: darkgrey;
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: fixed;
-    top: 5px;
-    left: calc(50% - 250px);
 }
 form{
+    margin-top: 20px;
     background-color: #666;
-    width: 700px;
+    width: 800px;
     height: 50px;
     display: flex;
     justify-content: space-around;
@@ -30,7 +28,7 @@ form{
 }
 #sort_wrapper{
     background-color: #333;
-    width: 700px;
+    width: 800px;
     height: 100px;
     display: flex;
     justify-content: space-around;
@@ -45,11 +43,19 @@ form{
         label{
             text-align: center;
             color: white;
+            display: flex;
+            align-items: center;
         }
     }   
 }
 #output{
     background-color: #555;
-    width: 50vw;
-    height: 100vw;
+    width: 700px;
+    // height: 100vh;
+    .item{
+        display: flex;
+        justify-content: space-around;
+        border: 1px solid black;
+        margin: 10px;
+    }
 }
