--- a/02-JavaScript/05-Objects and Arrays/shani/hw solution/style.scss
+++ b/02-JavaScript/05-Objects and Arrays/shani/hw solution/style.scss
@@ -7,3 +7,15 @@ img {
     margin-right: auto;
   
 }
+
+.card{
+    img{
+        width: 5rem;
+    border: 0.5rem solid black;
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+    }
+}
