--- a/02-JavaScript/05-Objects and Arrays/leon zap/style.scss
+++ b/02-JavaScript/05-Objects and Arrays/leon zap/style.scss
@@ -1,10 +1,10 @@
 body{
-    background-color: rgb(212, 202, 111);
+    background-color: rgb(233, 233, 132);
 }
 .logo{
     font-size: 60px;
     font-family: fantasy;
-    color: rgb(250, 250, 250);
+    color: rgb(17, 20, 31);
     position: absolute;
     left: 50vw;
 }
@@ -17,4 +17,19 @@ body{
     position: absolute;
     left: 23vw;
     top: 20vh;
+}
+
+.menu{
+    position: absolute;
+    top: 120px;
+    left: 0;
+    width: 20vw;
+    height: 30vh;
+    border: 2px solid black;
+}
+.products{
+    border: 1px solid black;
+    margin-top: 10px;
+    background-color: blanchedalmond;
+    
 }
