--- a/02-JavaScript/05-Objects and Arrays/Example/Lesson3/Exercise1/noa/zap.scss
+++ b/02-JavaScript/05-Objects and Arrays/Example/Lesson3/Exercise1/noa/zap.scss
@@ -1,4 +1,67 @@
-form{
-    display: flex;
-    
+body {
+    padding: 5vw;
+    // background-color: rgba(208, 235, 240, 0.349);
+
+    h1 {
+        text-shadow: 2px 2px 5px;
+        text-align: center;
+        text-decoration: underline;
+    }
+
+    form {
+        display: flex;
+        gap: 10px;
+
+        input {
+            border-radius: 5px;
+            background-color: opacify($color: #efd5f863, $amount: 0);
+        }
+
+        #submit{
+            border-radius: 2px;
+            background-color:white;
+
+        }
+
+    }
+
+    .sort {
+        p {
+            font-size: 15px;
+            font-family: fantasy;
+            margin-top: 15px;
+            margin-bottom: 5px;
+        }
+    }
+
+    .price {
+        margin-top: 15px;
+        margin-bottom: 5px;
+        font-size: 15px;
+        font-family: fantasy;
+
+        input {
+
+            margin-left: 5px;
+            width: 60px;
+            border-radius: 5px;
+            background-color: opacify($color: #efd5f863, $amount: 0);
+        }
+    }
+
+    #list {
+        border: 2px solid rgba(129, 126, 126, 0.719);
+        border-radius: 3px;
+        margin-top: 15px;
+        height: 60vh;
+    }
+
+    .card {
+        
+        p {
+            margin: 15px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-weight: 700px;
+        }
+    }
 }
