filter by category

--- a/02-JavaScript/05-Objects and Arrays/Etan/Item Adding/Zap/style.scss
+++ b/02-JavaScript/05-Objects and Arrays/Etan/Item Adding/Zap/style.scss
@@ -16,10 +16,10 @@ body {
 
 header {
   // margin: 0;
-  // padding: 20vh 10vw;
+  padding: 2rem;
 
   height: 20vh;
-  width: 100vw;
+  width: 100%;
   background-color: rgb(58, 63, 64);
   display: grid;
   grid-template-columns: 25vw 50vw 25vw;
