--- a/02-JavaScript/05-Objects and Arrays/leon zap/style.scss
+++ b/02-JavaScript/05-Objects and Arrays/leon zap/style.scss
@@ -1,16 +1,16 @@
 body{
-    background-color: rgb(233, 233, 132);
+    background-color: rgb(233, 233, 214);
 }
 .logo{
     font-size: 60px;
-    font-family: fantasy;
-    color: rgb(17, 20, 31);
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(4, 2, 107);
     position: absolute;
     left: 50vw;
 }
 .rootItem{
     border: 2px solid black;
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(177, 156, 22);
     width: 70vw;
     height: 90vh;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -33,3 +33,4 @@ body{
     background-color: blanchedalmond;
     
 }
+
