--- a/02-JavaScript/07-DOM manipulations/Andrew/andrew/05/index.scss
+++ b/02-JavaScript/07-DOM manipulations/Andrew/andrew/05/index.scss
@@ -1,12 +1,13 @@
 body {
-    
+
     font-family: Arial, Helvetica, sans-serif;
     background-color: darkgrey;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-form{
+
+form {
     margin-top: 20px;
     background-color: #666;
     width: 800px;
@@ -14,57 +15,80 @@ form{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    #item_name{
+
+    #item_name {
         height: 20px;
     }
-    #item_price{
+
+    #item_price {
         width: 80px;
         height: 20px;
     }
-    #submit{
+
+    #submit {
         width: 80px;
         height: 25px;
     }
 }
-#sort_wrapper{
+
+#sort_wrapper {
     background-color: #333;
     width: 800px;
     height: 100px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    button{
+
+    button {
         width: 100px;
         height: 30px;
     }
-    #sliders{
+
+    #sliders {
         display: flex;
         flex-direction: column;
-        label{
+
+        label {
             text-align: center;
             color: white;
             display: flex;
             align-items: center;
         }
-    }   
+    }
 }
-#output{
+
+#output {
     background-color: #555;
     width: 800px;
     padding-block: 50px;
     perspective: 1500px;
-    .item{
+
+    .item {
         display: flex;
         justify-content: space-around;
+        align-items: center;
         border: 1px solid black;
         margin: 20px;
         border-radius: 10px;
         box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
         transform: rotateY(10deg);
         transition: ease 500ms;
-        &:hover{
+
+        &:hover {
             transform: scale(1.1) rotateY(0deg);
             margin: 40px;
         }
+
+        button {
+            height: 40px;
+            background-color: #AAA;
+            border-radius: 5px;
+        }
+    }
+}
+
+button {
+    &:hover {
+        cursor: pointer;
     }
 }
