--- a/02-JavaScript/05-Objects and Arrays/mishadu/style.scss
+++ b/02-JavaScript/05-Objects and Arrays/mishadu/style.scss
@@ -3,7 +3,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: antiquewhite;
+    background-color: rgb(255, 255, 255);
 }
 
 .wrapper{
