--- a/02-JavaScript/09-formsAndObjects/HW/shani hw/style.scss
+++ b/02-JavaScript/09-formsAndObjects/HW/shani hw/style.scss
@@ -1,7 +1,14 @@
+body {
+    margin: 0px;
+    padding: 0px;
+    background-color: rgba(82, 23, 23, 0.87);
+}
+
+
 h1 {
     text-align: center;
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-    font-size: 40px;
+    font-size: 60px;
     letter-spacing: -1.2px;
     word-spacing: 1px;
     color: #000000;
@@ -10,21 +17,22 @@ h1 {
     font-style: italic;
     font-variant: small-caps;
     text-transform: capitalize;
-    margin-bottom:1rem;
+
 }
 
 #root {
-   
-    display: grid;    
+
+    display: grid;
     grid-template-rows: repeat(4, 10rem);
     grid-template-columns: repeat(2, 20vw);
-    gap:2rem;
+    gap: 2rem;
     justify-content: center;
-    padding-top:20%;
-    
+    padding-top: 20%;
+
+
 
     .painting {
-        
+
         padding: 2% 2%;
         display: inline-block;
         border: 3px solid #333333;
@@ -35,4 +43,8 @@ h1 {
 
 
     }
+}
+
+form {
+    text-align:center;
 }
