--- a/02-JavaScript/09-formsAndObjects/HW/OmriAharonov/Zap2/zap.scss
+++ b/02-JavaScript/09-formsAndObjects/HW/OmriAharonov/Zap2/zap.scss
@@ -21,6 +21,12 @@ body {
         justify-content: left;
     }
 
+    #select{
+        width: 150px;
+        height: 30px;
+        margin: 15px auto;
+    }
+
     .sort {
         display: flex;
         height: 30px;
@@ -39,8 +45,17 @@ body {
         .card_item {
 
             p {
+                display:flex ;
+                width: 480px;
                 margin-left: 10px;
                 font-size: 1.5rem;
+                
+                
+                button{
+                    width: 20px;
+                    height: 20px;
+                   cursor: pointer;
+                }
             }
         }
     }
