--- a/02-JavaScript/09-formsAndObjects/HW/Etan hw/zap.scss
+++ b/02-JavaScript/09-formsAndObjects/HW/Etan hw/zap.scss
@@ -15,11 +15,11 @@ html {
   }
   
   header {
+    font-size:1em;
     // margin: 0;
     padding: 2rem;
-  
     height: 20vh;
-    width: 100%;
+    width: 100vw;
     background-color: rgb(58, 63, 64);
     display: grid;
     grid-template-columns: 25vw 50vw 25vw;
@@ -34,12 +34,12 @@ html {
     }
     #sortButtons {
       grid-column: 1;
-      grid-row: 2/ span 2;
+      grid-row: 3;
       margin: auto;
       color: #ffffff;
     }
     #filters {
-      grid-column: 2/ span 2;
+      grid-column: 1/ span 3;
       grid-row: 2;
       margin:auto;
       color: #ffffff;
@@ -50,7 +50,7 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
-    width: 100vw;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -60,26 +60,38 @@ html {
     //   display: flex;
     //   color: #142d4c;
     //   flex-direction: row;
-    //   overflow: scroll;
     //   gap: 0.5rem;
     //   background: #9fd3c7;
     //   background-size: max;
     //   color: #385170;
     // }
     #card {
-      min-height: 20rem;
-      width: 15rem;
+      
+      color: #9fd3c777;
+      background: #353535;
+      padding: 1.5rem;
+      font-size: 1.2em;
+      border-radius: 1em;
+      height: 15rem;
+      width: 20rem;
       display: grid;
       overflow-x: hidden;
       grid-auto-columns: 45% 45% 10%;
+      grid-auto-rows: 15% 35% 15% 35% ;
       grid-template-areas: 
       'n n x'
       'd fd fd'
+      '.  .  .'
       'p sp sp';
-      color: #9fd3c777;
-      background: #353535;
-      padding: 0.5rem;
-      font-size: 1.2em;
+      &:hover {
+        cursor: pointer;
+      h1{
+        color: #9fd3c7;
+      }
+    }
+      &>*{
+        overflow-y: scroll;
+      }
       i{
         grid-area: x;
         align-self: center;
@@ -92,10 +104,7 @@ html {
       h1{
         font-size: 1.5em;
         grid-area: n;
-        &:hover{
-          color: #9fd3c7;
-          cursor: pointer;
-        }
+        
       }
       .model{
         grid-area: d;
@@ -120,10 +129,13 @@ html {
   .container {
     color: #353535;
     background-size: cover;
+    overflow-x: hidden;
+
   
     &__items {
       display: flex;
       flex-direction: row;
+      flex-grow: none;
       overflow-x: scroll;
       gap: 0.5rem;
       background-size: max;
