--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -1,3 +1,96 @@
+:root{
+    --main-color-purple1: #C21E86;
+    --main-color-purple2: #8E1562;
+    --main-color-purple3: #580E3D;
+    --main-color-gray2: #161811;
+    --main-color-gray1: #25291C;
+    --main-color-gray3: #424833;
+    --main-color-light-gray1: #989C94;
+    --main-color-light-gray2: #666A62;
+    --main-color-light-gray3: #333531;
+}
 body{
-    
+    background-color: var(--main-color-light-gray3);
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    height: 200vh;
+}
+// div{
+//     border: 1px solid red;
+// }
+.header{
+    position: fixed;
+    z-index: 1;
+    top: 0px;
+    left: 0px;
+    height: 45px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    // border: 1px solid red;
+    width: 99vw;
+    background-color: var(--main-color-light-gray2);
+    &__wrapper{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        // width: 200px;
+        &__item{
+            width: fit-content;
+            margin-inline: 20px;
+            font-size: 1rem;
+        }
+    }
+}
+.nav-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-block: 10px;
+    padding-top: 50px;
+    &__item{
+        margin-inline: 15px;
+    }
+}
+.filter-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-block: 10px;
+    padding-block: 20px;
+    background-color: var(--main-color-light-gray2);
+    &__item{
+        margin-inline: 20px;
+        font-size: 1.4rem;
+    }
+}
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__category-wrapper{
+        padding-top: 50px;
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(3, 1fr);
+        position: relative;
+        &__title{
+            position: absolute;
+            font-size: 2rem;
+        }
+        &__card{
+            background-color: #ebebeb;
+            border-radius: 10px;
+            color: var(--main-color-gray2);
+            height: 350px;
+            width: 250px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+            img{
+                height: 200px;
+            }
+        }
+    }
 }
