--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -2,12 +2,53 @@
     padding: 0;
     margin: 0;
     border: 0;
+    font-family: bebas;
+}
 
+body {
+    // font-family: 'Bebas Neue', cursive;
+    font-family: 'Poppins', sans-serif;
+    // font-family: 'The Nautigal', cursive;
+    // font-family: 'VT323', monospace;
+    // font-family: 'Zen Kurenaido', sans-serif;
 }
 
 .home {
     
-    background: url(http://www.fusushi.co.il/warehouse/dynamic/50913.jpg),
-                url(http://www.fusushi.co.il/warehouse/dynamic/50916.jpg),
-                url(http://en.fusushi.co.il/warehouse/dynamic/55244.jpg;);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    min-height: 100vh;
+
+    background:
+        url(http://www.fusushi.co.il/warehouse/dynamic/50913.jpg),
+        url(http://www.fusushi.co.il/warehouse/dynamic/50916.jpg),
+        url(http://en.fusushi.co.il/warehouse/dynamic/55244.jpg;);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center center;
+
+}
+
+.lobby {
+    min-height: 100vh;
+    background-color: rgb(18, 18, 19);
+}
+
+.navbar {
+    position: relative;
+    top: 3em;
+    width: 1100px;
+    height: 75px;
+    background-color: #EBEBEB;
+
+    ul {
+        list-style-type: none;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1em;
+    }
 }
