--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -13,11 +13,19 @@ body {
     // font-family: 'Zen Kurenaido', sans-serif;
 }
 
-.home {
-    
+
+.homeopacity{
+    background-color: rgba(0, 0, 0, 0.308);
+    min-height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    
+}
+
+.home {
+
     position: relative;
     min-height: 100vh;
 
@@ -29,7 +37,6 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
-
 }
 
 .lobby {
@@ -40,7 +47,10 @@ body {
 .navbar {
     position: relative;
     top: 3em;
-    width: 1100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1200px;
     height: 75px;
     background-color: #EBEBEB;
 
@@ -48,7 +58,18 @@ body {
         list-style-type: none;
         display: flex;
         justify-content: space-between;
+        width: 100%;
         align-items: center;
         padding: 1em;
+
+        img{
+            height: 130px;
+        }
     }
+
+    
+}
+
+.footer__whatsapp{
+    height: 200px;
 }
