--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -14,14 +14,14 @@ body {
 }
 
 
-.homeopacity{
+.homeopacity {
     background-color: rgba(0, 0, 0, 0.308);
     min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
 }
 
 .home {
@@ -37,6 +37,15 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
+
+    &__title{
+        position: absolute;
+        top: 50%;
+        color: #EBEBEB;
+        font-size: 65px;
+    }
+
+
 }
 
 .lobby {
@@ -45,14 +54,15 @@ body {
 }
 
 .navbar {
-    position: relative;
+    position: fixed;
     top: 3em;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 1200px;
-    height: 75px;
+    height: 60px;
     background-color: #EBEBEB;
+    z-index: 2;
 
     ul {
         list-style-type: none;
@@ -62,14 +72,39 @@ body {
         align-items: center;
         padding: 1em;
 
-        img{
+        img {
             height: 130px;
         }
     }
 
-    
 }
 
-.footer__whatsapp{
-    height: 200px;
+.footer__whatsapp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 80%;
+    right: 90%;
+    height: 100px;
+    width: 100px;
+    color: white;
+
+    img {
+        margin-top: 0.3em;
+        height: auto;
+        width: 100px;
+    }
+
 }
+
+.footer__gift{
+    img{
+        position: absolute;
+        top: 83%;
+        left: 90%;
+        height: 100px;
+        width: 100px;
+    }
+}
+
