--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/Gucci/ZAP/zap.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/Gucci/ZAP/zap.scss
@@ -1,7 +1,7 @@
-body {
+body, option {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.2em;
-    
+
 
 }
 
@@ -37,6 +37,16 @@ body {
     gap: 0.7em;
     margin-bottom: 2em;
 
+    &__selection {
+        select, option {
+            background-color: rgb(58, 63, 64);
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 0.9em;
+            color: white;
+        }
+       
+    }
+
 }
 
 .searchResut,
@@ -58,7 +68,6 @@ body {
 
     .category {
         cursor: pointer;
-        //  text-decoration: underline;
     }
 
 }
@@ -95,7 +104,7 @@ body {
     cursor: pointer;
 }
 
-.computers {
+.computers, .item {
     width: 60%;
     display: flex;
     justify-content: space-between;
@@ -103,7 +112,6 @@ body {
     margin-right: auto;
     padding: 0em 3em 0em 3em;
     margin-top: 1em;
-   
     box-shadow: 1px 2px 6px rgba(74, 59, 87, 0.4);
 
     &_comp1 {
@@ -114,15 +122,17 @@ body {
 
 }
 
-.lookig_for, .delete, .sortPrice, .sortName {
-    margin-top: 2em;
+.lookig_for,
+.delete {
+    margin-top: 1em;
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 1em;
-    padding-bottom: 2em;
+    padding-bottom: 1em;
 
-    input {
+    input,
+    button {
         border-radius: 10px;
         width: 100%;
         height: 3em;
@@ -132,7 +142,28 @@ body {
 
     }
 
+
+}
+
+.sortPrice {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    width: 100%;
+    height: 3em;
+    border-color: transparent;
+    font-size: 1em;
+    box-shadow: 1px 2px 6px rgba(102, 95, 107, 0.4);
+
+}
+
+.sort {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
     button {
+         margin-top: 1em;
         border-radius: 10px;
         font-size: 1em;
         border-color: transparent;
