--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/style.scss
@@ -41,12 +41,45 @@
 
 .main-grid{
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(4,1fr);
-    
+    grid-template-columns: repeat(6,1fr);
+    grid-template-rows: repeat(10,1fr);
+    width: 100vw;
+    height: 900px;
 }
-._mainpic{background-size: cover;
+._mainpic{background-size: 100%;
     background-repeat: no-repeat;
-    grid-column: 1/4;
-    grid-row: 1/3;
+    grid-column: 1/7;
+    grid-row: 1/8;
+    padding: 5px;
+    margin-top: 15px;
+}
+._main_cta{
+    grid-column:  1/7;
+    grid-row: 9/9;
+    text-align: center;
+    font-size: 32px;
+    p{
+        font-family: fantasy;
+        font-weight: bold;
+        font-size: 50px;
+    }
+}
+
+._main_cta_boxes{
+    position: relative;
+    left: 450px;
+    display: flex;
+    gap: 6px;
+    .box1{ background-color: black;
+        border: 1px solid black;
+    border-radius: 12px;
+    width: 15%;
+    height: 10vh;
+    color: white;
+    text-align: center;
+    font-family: monospace;
+    font-size: 20px;
+    }
+
+
 }
