--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -2,15 +2,11 @@
     padding: 0;
     margin: 0;
     border: 0;
-    font-family: bebas;
+    
 }
 
 body {
-    // font-family: 'Bebas Neue', cursive;
     font-family: 'Poppins', sans-serif;
-    // font-family: 'The Nautigal', cursive;
-    // font-family: 'VT323', monospace;
-    // font-family: 'Zen Kurenaido', sans-serif;
 }
 
 
@@ -38,9 +34,9 @@ body {
     background-size: cover;
     background-position: center center;
 
-    &__title{
+    &__title {
         position: absolute;
-        top: 50%;
+        top: 40%;
         color: #EBEBEB;
         font-size: 65px;
     }
@@ -50,7 +46,7 @@ body {
 
 .lobby {
     min-height: 100vh;
-    background-color: rgb(18, 18, 19);
+    background-color: rgb(12, 11, 11);
 }
 
 .navbar {
@@ -63,8 +59,11 @@ body {
     height: 60px;
     background-color: #EBEBEB;
     z-index: 2;
+    font-size: 18px;
+
 
     ul {
+        
         list-style-type: none;
         display: flex;
         justify-content: space-between;
@@ -72,39 +71,93 @@ body {
         align-items: center;
         padding: 1em;
 
+        li{
+            padding: 5px;
+            &:hover {
+                cursor: pointer;
+                box-shadow: 0 0 0 1px rgb(0, 0, 0);
+            }
+        
+        }
+
         img {
             height: 130px;
+        }
+
+        .smedia{
+            font-size: 24px;
+            i{
+                margin-inline: 0.2em;
+            }
         }
     }
 
 }
 
-.footer__whatsapp {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+.footer {
     position: absolute;
     top: 80%;
-    right: 90%;
-    height: 100px;
-    width: 100px;
+    display: flex;
+    width: 95%;
+    justify-content: space-between;
     color: white;
 
-    img {
-        margin-top: 0.3em;
-        height: auto;
+    .footer__whatsapp {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 150px;
         width: 100px;
+        text-align: center;
+        font-size: 18px;
+        line-height: 1;
+
+        img {
+            margin-top: 0.2em;
+            height: 90px;
+            width: 90px;
+            &:hover {
+                cursor: pointer;
+            }
+        }
+
     }
 
-}
+    .footer__arrowpics {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-end;
 
-.footer__gift{
-    img{
-        position: absolute;
-        top: 83%;
-        left: 90%;
-        height: 100px;
-        width: 100px;
+
+        &__arrow {
+            font-size: 5rem;
+            font-weight: 200;
+        }
+
+        &__pics {
+            i {
+                margin-inline: 0.2em;
+            }
+        }
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    .footer__gift {
+        display: flex;
+        align-items: center;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        img {
+            height: 96px;
+            width: 96px;
+        }
     }
 }
-
