--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -1,8 +1,36 @@
+@keyframes arrowdown {
+
+    from {
+        top: -20px;
+    }
+
+    to {
+        top: 10px;
+    }
+
+}
+
+@keyframes backgroundphotos{
+
+    0%{
+
+    }
+
+    33%{
+
+    }
+
+    66%{
+        
+    }
+}
+
+
 * {
     padding: 0;
     margin: 0;
     border: 0;
-    
+
 }
 
 body {
@@ -63,7 +91,7 @@ body {
 
 
     ul {
-        
+
         list-style-type: none;
         display: flex;
         justify-content: space-between;
@@ -71,22 +99,24 @@ body {
         align-items: center;
         padding: 1em;
 
-        li{
+        li {
             padding: 5px;
+
             &:hover {
                 cursor: pointer;
                 box-shadow: 0 0 0 1px rgb(0, 0, 0);
             }
-        
+
         }
 
         img {
             height: 130px;
         }
 
-        .smedia{
+        .smedia {
             font-size: 24px;
-            i{
+
+            i {
                 margin-inline: 0.2em;
             }
         }
@@ -106,17 +136,22 @@ body {
     .footer__whatsapp {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        height: 150px;
+        justify-content: center;
+        height: 180px;
         width: 100px;
         text-align: center;
         font-size: 18px;
         line-height: 1;
 
+        .wapic {
+            width: 100%;
+        }
+
         img {
             margin-top: 0.2em;
             height: 90px;
             width: 90px;
+
             &:hover {
                 cursor: pointer;
             }
@@ -134,6 +169,12 @@ body {
         &__arrow {
             font-size: 5rem;
             font-weight: 200;
+            position: relative;
+            animation-name: arrowdown;
+            animation-duration: 1s;
+            animation-direction: alternate;
+            animation-iteration-count: infinite;
+            animation-timing-function: ease-in-out;
         }
 
         &__pics {
@@ -150,6 +191,7 @@ body {
     .footer__gift {
         display: flex;
         align-items: center;
+
 
         &:hover {
             cursor: pointer;
