--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -1,7 +1,7 @@
 @keyframes arrowdown {
 
     from {
-        top: -20px;
+        top: -18px;
     }
 
     to {
@@ -13,15 +13,15 @@
 @keyframes backgroundphotos {
 
     0% {
-        background: url(http://www.fusushi.co.il/warehouse/dynamic/50913.jpg);
+        background: url(http://en.fusushi.co.il/warehouse/dynamic/55244.jpg);
     }
 
-    33% {
+    50% {
         background: url(http://www.fusushi.co.il/warehouse/dynamic/50916.jpg);
     }
 
-    66% {
-        background: url(http://en.fusushi.co.il/warehouse/dynamic/55244.jpg);
+    100% {
+        background: url(http://www.fusushi.co.il/warehouse/dynamic/50913.jpg);
     }
 }
 
@@ -38,6 +38,7 @@ body {
     font-family: 'Barlow Condensed', sans-serif;
 }
 
+// ---------- HOME -------  //
 
 .homeopacity {
     background-color: rgba(0, 0, 0, 0.308);
@@ -55,22 +56,21 @@ body {
     min-height: 100vh;
 
     background:
-        url(http://www.fusushi.co.il/warehouse/dynamic/50913.jpg),
-        url(http://www.fusushi.co.il/warehouse/dynamic/50916.jpg),
-        url(http://en.fusushi.co.il/warehouse/dynamic/55244.jpg);
-   
-
-    animation-name: backgroundphotos;
-    animation-duration: 15s;
-    animation-direction: normal;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
+        url(http://www.fusushi.co.il/warehouse/dynamic/50913.jpg);
+        // url(http://www.fusushi.co.il/warehouse/dynamic/50916.jpg),
+        // url(http://en.fusushi.co.il/warehouse/dynamic/55244.jpg);
 
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
+    transition: 1s;
 
+    animation-name: backgroundphotos;
+    animation-duration: 20s;
+    animation-direction: normal;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
 
 
     &__title {
@@ -114,12 +114,14 @@ body {
                 box-shadow: 0 0 0 1px rgb(0, 0, 0);
             }
 
+
         }
 
-        .fulogo {
+        .fulogo, .smedia {
             &:hover {
                 box-shadow: 0 0 0 0px rgb(0, 0, 0);
             }
+
         }
 
         img {
@@ -131,6 +133,13 @@ body {
 
             i {
                 margin-inline: 0.2em;
+            }
+        }
+
+        i{
+            padding: 0.2em;
+            &:hover{
+                box-shadow: 0 0 0 1px rgb(0, 0, 0);
             }
         }
     }
@@ -147,11 +156,12 @@ body {
     color: white;
 
     .footer__whatsapp {
+
         display: flex;
         flex-direction: column;
         justify-content: center;
         height: 180px;
-        width: 100px;
+        width: 130px;
         text-align: center;
         font-size: 18px;
         line-height: 1;
