--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -87,6 +87,11 @@ body {
     margin-block: 10px;
     padding-block: 20px;
     background-color: var(--main-color-light-gray2);
+    z-index: -1;
+
+    transition: ease 500ms;
+    transform: translateY(-30px);
+    opacity: 0;
 
     &__group {
         width: 100px;
@@ -102,6 +107,11 @@ body {
             }
         }
     }
+}
+
+.visible{
+    opacity: 1;
+    transform: translateY(0px);
 }
 
 #main {
